--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
