--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "peoples-recipes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -13,8 +17,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  },
   "bugs": {
     "url": "https://github.com/akerschen-coder/peoples-recipes/issues"
   },
-  "homepage": "https://github.com/akerschen-coder/peoples-recipes#readme"
+  "homepage": "https://github.com/akerschen-coder/peoples-recipes#readme",
+  "dependencies": {
+    "@apollo/client": "^3.5.5",
+    "concurrently": "^6.4.0"
+  }
 }
