--- a/package.json
+++ b/package.json
@@ -23,9 +23,5 @@
   "bugs": {
     "url": "https://github.com/akerschen-coder/peoples-recipes/issues"
   },
-  "homepage": "https://github.com/akerschen-coder/peoples-recipes#readme",
-  "dependencies": {
-    "@apollo/client": "^3.5.5",
-    "concurrently": "^6.4.0"
-  }
+  "homepage": "https://github.com/akerschen-coder/peoples-recipes#readme"
 }
